test/files/semantic/reject/var_redef_global.neo
let x: int = 10
let x: float = 2.0